--- a/test_tools/pyproject.toml
+++ b/test_tools/pyproject.toml
@@ -2,13 +2,15 @@
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+include = ["jsonui_test_cli*"]
+
 [project]
 name = "jsonui-test-cli"
 version = "1.0.0"
 description = "CLI tool for validating and generating documentation from JsonUI test files"
-readme = "README.md"
 requires-python = ">=3.10"
-license = {text = "MIT"}
+license = "MIT"
 authors = [
     {name = "Tai Kimura"}
 ]
@@ -17,7 +19,6 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Console",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
